--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Sample Web Page</title>
 </head>
 <body>
-    <h1>Welcome to My Project</h1>
-    <p>This is a demo page hosted on GitHub Pages.</p>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <section id="home">
+        <h2>Home Section</h2>
+        <p>This is the home section of this sample web page.</p>
+    </section>
+    <section id="about">
+        <h2>About Section</h2>
+        <p>This section is about the purpose of this website.</p>
+        <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>If you have any questions, feel free to contact us.</p>
+    </section>
+    <footer>
+        <p>Copyright © 2024 by Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
